--- a/source/browser-action-styles.css
+++ b/source/browser-action-styles.css
@@ -1,34 +1,23 @@
 body {
-	font-family: Lato, -apple-system, BlinkMacSystemFont, 'segoe ui', 'avenir next', avenir, 'helvetica neue', helvetica, ubuntu, roboto, noto, arial, sans-serif;
+	font-family: Lato, -apple-system, BlinkMacSystemFont, "segoe ui", "avenir next", avenir, "helvetica neue", helvetica, ubuntu, roboto, noto, arial, sans-serif;
+	font-feature-settings: "lnum", "pnum", "kern", "liga", "clig";
+	-webkit-font-smoothing: antialiased;
+	font-style: normal;
+	font-weight: 400;
 	margin: 0;
 	background-color: #eef2f5;
 	min-width: 500px;
 }
 
-button {
-	display: block;
-	margin: auto;
-	padding: 0.5em 2em;
-	border: 1px solid rgb(24, 24, 24);
-	box-sizing: border-box;
-	text-decoration: none;
-	text-transform: uppercase;
-	font-weight: 200;
-	color: rgb(24, 24, 24);
-	text-align: center;
-	transition: all 0.15s;
-}
-
-button:hover {
-	color: rgb(180, 180, 180);
-	border-color: rgb(180, 180, 180);
-}
+/*.ambossTooltipLogo{*/
+/*	padding-bottom: 1rem;*/
+/*}*/
 
 .settings_bar {
 	display: flex;
 	justify-content: space-evenly;
 	width: 100%;
-	height: 2rem;
+	height: 3rem;
 	background-color: white;
 }
 
@@ -51,11 +40,9 @@ button:hover {
 }
 
 .ambossHeader {
-	font-style: normal;
-	font-weight: bold;
+	font-weight: 700;
 	font-size: 16px;
 	line-height: 24px;
-	/* identical to box height, or 150% */
 	letter-spacing: 0.2px;
 	color: #303438;
 	cursor: pointer;
@@ -87,7 +74,7 @@ button:hover {
 }
 
 .ambossSnippetDescription {
-	margin-top: 10px;
+	margin-bottom: 0.75rem;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 13.7px;
@@ -97,10 +84,10 @@ button:hover {
 }
 
 .ambossFooter {
-	width: calc(100% + 32px);
+	width: calc(100% + 16px);
 	display: flex;
-	margin-left: -16px;
-	margin-bottom: -16px;
+	margin-left: -8px;
+	margin-bottom: -8px;
 	flex-direction: column;
 	justify-content: flex-end;
 	border-top: 1px solid rgb(238, 242, 245);
@@ -116,14 +103,13 @@ button:hover {
 	text-decoration-line: none;
 }
 
-
 .icon_container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-left: -0.5rem;
+	margin-left: -1rem;
 	margin-top: -1rem;
-	margin-bottom: -0.5rem;
+	margin-bottom: -1rem;
 	min-width: 56px;
 	border-right: 1px solid rgb(238, 242, 245);
 }
@@ -136,42 +122,47 @@ button:hover {
 
 .link_arrow_container {
 	display: flex;
+	align-items: center;
+	align-content: center;
 	width: 90%;
 	padding-left: 5%;
 	padding-right: 5%;
 }
 
 .link_arrow_container > h4 {
+	margin: 0;
+	padding: 0;
 	color: rgb(54, 65, 73);
-	display: inline;
 	font-size: 16px;
 	word-break: break-word;
-	line-height: 24px;
 	font-weight: 400;
-	margin: 0;
 }
 
 .arrow_container {
+	margin: 0;
+	padding: 0;
 	margin-left: auto;
 }
 
 .arrow_container > svg {
+	margin: 0;
+	padding: 0;
 	color: rgb(153, 167, 179);
 	width: 24px;
 	height: 24px;
 	flex-shrink: 0;
 }
 
-.iconBook {
-	width: 18px;
-	height: 22px;
-	margin-right: 20px;
-}
+/*.iconBook {*/
+/*	width: 18px;*/
+/*	height: 22px;*/
+/*	margin-right: 20px;*/
+/*}*/
 
-.iconAmbossLogo {
-	width: 20px;
-	height: 20px;
-}
+/*.iconAmbossLogo {*/
+/*	width: 20px;*/
+/*	height: 20px;*/
+/*}*/
 
 .no-glossary {
 	height: 400px;
